feat: :sparkles: Setup docker and install new packages

--- a/package.json
+++ b/package.json
@@ -17,19 +17,37 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migration:generate": "npm run typeorm -- -d orm.config.ts migration:generate ./src/common/database/migrations/",
+    "migration:create": "npm run typeorm -- migration:create ./src/common/database/migrations/",
+    "migration:run": "npm run typeorm migration:run -- -d orm.config.ts",
+    "migration:revert": "npm run typeorm migration:revert -- -d orm.config.ts",
+    "seed": "ts-node --require tsconfig-paths/register scripts/seed.ts",
+    "seed:refresh": "npm run migration:revert && npm run migration:run && npm run seed"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^9.2.0",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/elasticsearch": "^11.1.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.3",
+    "@nestjs/typeorm": "^11.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
+    "dotenv": "^17.2.3",
+    "ioredis": "^5.8.2",
+    "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.28"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
+    "@faker-js/faker": "^10.1.0",
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
