--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "ts-node --require tsconfig-paths/register ./node_modules/typeorm/cli",
     "migration:generate": "npm run typeorm -- -d orm.config.ts migration:generate ./src/common/database/migrations/",
     "migration:create": "npm run typeorm -- migration:create ./src/common/database/migrations/",
     "migration:run": "npm run typeorm migration:run -- -d orm.config.ts",
