--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "migration:create": "npm run typeorm -- migration:create ./src/common/database/migrations/",
     "migration:run": "npm run typeorm migration:run -- -d orm.config.ts",
     "migration:revert": "npm run typeorm migration:revert -- -d orm.config.ts",
-    "seed": "ts-node --require tsconfig-paths/register scripts/seed.ts",
-    "seed:refresh": "npm run migration:revert && npm run migration:run && npm run seed"
+    "seed:refresh": "npm run migration:revert && npm run migration:run && npm run seed",
+    "seed": "ts-node -r tsconfig-paths/register scripts/seed.ts",
+    "sync:elasticsearch": "ts-node -r tsconfig-paths/register scripts/sync-elasticsearch.ts",
+    "seed:full": "ts-node -r tsconfig-paths/register scripts/seed-and-sync.ts",
+    "seed:docker": "docker-compose exec app pnpm run seed:full"
   },
   "dependencies": {
     "@elastic/elasticsearch": "^9.2.0",
